# NeuralFastDownward

./: .gitignore  EXTENDING.md  NEURALNETWORKS.md  README.md  SAMPLING.md
driver/: arguments.py  dynamic_args.py  run_components.py
examples/state_goal_network/: model.pb  run.sh
examples/test_pytorch/: CMakeLists.txt  ReadMe.md  create_model.py  example-app.cpp  run.sh  traced.pt
examples/test_tensorflow/: best_model.pb  run.sh  sas_plan
src/: CMakeLists.txt  translator.py
src/cmake_modules/: FastDownwardMacros.cmake  FindEIGEN.cmake  FindPROTOBUF.cmake  FindTENSORFLOW.cmake
src/search/: CMakeLists.txt  DownwardFiles.cmake  abstract_task.cc  abstract_task.h  command_line.cc  command_line.h  evaluation_context.cc  evaluation_context.h  evaluation_result.cc  evaluation_result.h  evaluator.cc  evaluator.h  heuristic.cc  heuristic.h  plan_manager.cc  plan_manager.h  planner.cc  policy.cc  policy.h  policy_cache.cc  policy_cache.h  policy_result.cc  policy_result.h  search_engine.cc  search_engine.h  search_space.cc  search_space.h  search_statistics.cc  search_statistics.h  state_registry.cc  state_registry.h  task_proxy.cc  task_proxy.h
src/search/heuristics/: network_heuristic.cc  network_heuristic.h
src/search/neural_networks/: abstract_network.cc  abstract_network.h  protobuf_network.cc  protobuf_network.h  state_goal_network.cc  state_goal_network.h  state_network.cc  state_network.h  test_torch_network.cc  test_torch_network.h  torch_network.cc  torch_network.h  (+4 more)
src/translate/: __init__.py  options.py  pddl_to_prolog.py  translate.py
(+90 files in other folders)
